--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </span>
                 <span class="social-label">
                     <span class="social-label-text">Telegram <span class="social-check">✓</span></span>
-                    <div class="social-username">t.me/username</div>
+                    <div class="social-username">t.me/@edgar_sanasaryan</div>
                 </span>
             </a>
             <a href="#" class="social-item" data-platform="whatsapp">
@@ -365,7 +365,7 @@
                 </span>
                 <span class="social-label">
                     <span class="social-label-text">WhatsApp <span class="social-check">✓</span></span>
-                    <div class="social-username">wa.me/1234567890</div>
+                    <div class="social-username">wa.me/89649620557</div>
                 </span>
             </a>
         </div>
@@ -442,4 +442,5 @@
     </script>
 </body> 
 </html>
+
 
