--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="description" id="description">Inventor, innovator, creator</div>
         
         <div class="social-networks" id="socialNetworks">
-            <a href="#" class="social-item" data-platform="telegram">
+            <a href="https://t.me/edgar_sanasaryan" class="social-item" data-platform="telegram">
                 <span class="social-icon">
                     <img src="telegram.png" alt="Telegram">
                 </span>
@@ -359,7 +359,7 @@
                     <div class="social-username">t.me/@edgar_sanasaryan</div>
                 </span>
             </a>
-            <a href="#" class="social-item" data-platform="whatsapp">
+            <a href="https://wa.me/79649620557" class="social-item" data-platform="whatsapp">
                 <span class="social-icon">
                     <img src="whatsapp.png" alt="WhatsApp">
                 </span>
@@ -442,5 +442,6 @@
     </script>
 </body> 
 </html>
+
 
 
